overflow fix

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -26,7 +26,7 @@ html, body {
   min-width: 400px;
   height: 100%;
   overflow: auto;
-  overflow-x: hidden;
+  overflow-x: hidden
 }
 
 ::highlight(keyColor) {
